--- a/app.json
+++ b/app.json
@@ -37,6 +37,24 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "androidNavigationBar": {
+     /*
+        Determines to show or hide bottom navigation bar.
+        "true" to show, "false" to hide.
+        If set to false, status bar will also be hide. As it's a general rule to hide both status bar and navigation bar on Android developer official docs.
+      */
+      /*
+        Configure the navigation bar icons to have light or dark color.
+        Valid values: "light-content", "dark-content".
+      */
+      "barStyle": "dark-content",
+
+      /*
+        Configuration for android navigation bar.
+        6 character long hex color string, eg: "#000000"
+      */
+      "backgroundColor": "#2a2a2a"
     }
   }
 }
