--- a/app.json
+++ b/app.json
@@ -31,7 +31,7 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#2a2a2a"
         }
       ]
     ],
@@ -48,6 +48,7 @@
         Configure the navigation bar icons to have light or dark color.
         Valid values: "light-content", "dark-content".
       */
+      "visible": "sticky-immersive",
       "barStyle": "dark-content",
 
       /*
