--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 EXPO_PUBLIC_BG_COLOR="#2a2a2a"
 EXPO_PUBLIC_FG1_COLOR="#a079c6"
+EXPO_PUBLIC_FG2_COLOR="#684f82"
 EXPO_PUBLIC_BACKEND_URL="https://chat-api-9x4j.onrender.com"
 EXPO_PUBLIC_WEBSOCKET_URL="wss://chat-api-9x4j.onrender.com"
