--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
 EXPO_PUBLIC_BG_COLOR="#2a2a2a"
 EXPO_PUBLIC_FG1_COLOR="#a079c6"
 EXPO_PUBLIC_FG2_COLOR="#684f82"
-EXPO_PUBLIC_BACKEND_URL="https://chat-api-9x4j.onrender.com"
-EXPO_PUBLIC_WEBSOCKET_URL="wss://chat-api-9x4j.onrender.com"
-EXPO_PUBLIC_GOOGLE_CLIENTID="446391202738-krtd1pa3trd2r6rbnvhetii5b4fmcqfa.apps.googleusercontent.com"
-EXPO_PUBLIC_GOOGLE_ANDROID_CLIENTID="446391202738-nafmcnqsc4vmjgpgshk8b5i2k28ags8b.apps.googleusercontent.com"
-EXPO_PUBLIC_GOOGLE_IOS_CLIENTID="446391202738-0ldj8tdldcvfklj5fho86r8ijq3n8eff.apps.googleusercontent.com"
+EXPO_PUBLIC_BACKEND_URL="https://chat-api-28ro.onrender.com"
+EXPO_PUBLIC_WEBSOCKET_URL="wss://chat-api-28ro.onrender.com"
