--- a/app.json
+++ b/app.json
@@ -35,6 +35,12 @@
           "resizeMode": "contain",
           "backgroundColor": "#2a2a2a"
         }
+      ],
+      [
+        "expo-secure-store",
+        {
+          "configureAndroidBackup": true
+        }
       ]
     ],
     "experiments": {
