--- a/app.json
+++ b/app.json
@@ -41,7 +41,8 @@
         {
           "configureAndroidBackup": true
         }
-      ]
+      ],
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true
