--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "undefined": "expo-auth-session/providers/google",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "expo-sqlite": "~15.2.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
