--- a/package.json
+++ b/package.json
@@ -7,50 +7,48 @@
     "start-tunnel": "expo start --tunnel",
     "reset-project": "node ./scripts/reset-project.js",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.9.0",
-    "expo": "~53.0.9",
-    "expo-audio": "^0.4.5",
-    "expo-auth-session": "^6.1.5",
-    "expo-av": "^15.1.4",
-    "expo-blur": "~14.1.4",
+    "expo": "^53.0.10",
+    "expo-audio": "~0.4.6",
+    "expo-auth-session": "~6.2.0",
+    "expo-av": "~15.1.5",
+    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-crypto": "~14.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
+    "expo-image": "~2.2.0",
     "expo-linking": "~7.1.5",
-    "expo-navigation-bar": "^4.2.4",
+    "expo-navigation-bar": "~4.2.5",
     "expo-router": "~5.0.6",
     "expo-secure-store": "~14.2.3",
-    "expo-splash-screen": "~0.30.8",
-    "expo-sqlite": "~15.2.10",
+    "expo-splash-screen": "~0.30.9",
+    "expo-sqlite": "~15.2.11",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-keyboard-aware-scrollview": "^2.1.0",
-    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "undefined": "expo-auth-session/providers/google",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
